<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/editInputAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:digits="1234567890"/>

    <TextView
        android:id="@+id/textNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_of_pax"/>

    <EditText
        android:id="@+id/editInputNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tbSVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/no_svs"
            android:textOn="@string/svs" />

        <ToggleButton
            android:id="@+id/tbGST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:textOff="@string/no_gst"
            android:textOn="@string/gst" />
    </LinearLayout>

    <TextView
        android:id="@+id/textDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount"/>

    <EditText
        android:id="@+id/editInputDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/rgPaymentMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/radioButtonPaynow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paynow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:text="@string/split"
            android:textColor="#000000"
            app:backgroundTint="#D3D3D3" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textColor="#000000"
            app:backgroundTint="#D3D3D3" />
    </LinearLayout>

    <TextView
        android:id="@+id/textTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_bill" />

    <TextView
        android:id="@+id/textIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/each_pays" />

</LinearLayout>